force-app/main/default/objects/Cloudrop__MassMailer_List_View__c/Cloudrop__MassMailer_List_View__c.object-meta.xml
<CustomObject>
    <label>MassMailer List View</label>
    <nameField>
        <label>MassMailer List View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MassMailer List Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>