force-app/main/default/objects/Cloudrop__MassMailer_List_View__c/fields/Cloudrop__API_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__API_Name__c</fullName>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>