force-app/main/default/objects/Cloudrop__MassMailer_List_View__c/fields/Cloudrop__Child_Object_Wrapper__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Child_Object_Wrapper__c</fullName>
    <label>Child Object Wrapper</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>