force-app/main/default/objects/Cloudrop__MassMailer_List_View__c/fields/Cloudrop__Columns__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Columns__c</fullName>
    <label>Columns</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>