force-app/main/default/objects/Cloudrop__MassMailer_List_View__c/fields/Cloudrop__filterLogic__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__filterLogic__c</fullName>
    <label>filterLogic</label>
    <type>TextArea</type>
</CustomField>