force-app/main/default/objects/Cloudrop__MassMailer_List_View__c/fields/Cloudrop__Primary_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Primary_Object_Name__c</fullName>
    <label>Primary Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>