force-app/main/default/objects/Cloudrop__MassMailer_List_View__c/fields/Cloudrop__selected_Child_Filter__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__selected_Child_Filter__c</fullName>
    <label>selected Child Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>