force-app/main/default/objects/Cloudrop__MassMailer_List_View__c/fields/Cloudrop__Selected_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Selected_Profiles__c</fullName>
    <label>Selected Profiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>