force-app/main/default/objects/Cloudrop__MassMailer_List_View__c/fields/Cloudrop__Target_Object_Wrapper__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Target_Object_Wrapper__c</fullName>
    <description>Stores the target object to which mail will be sent and the email field</description>
    <label>Target Object Wrapper</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>