force-app/main/default/objects/Cloudrop__MassMailer_List_View__c/fields/Cloudrop__Visible_To__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Visible_To__c</fullName>
    <label>Visible To</label>
    <length>80</length>
    <type>Text</type>
</CustomField>