force-app/main/default/objects/Cloudrop__MassMailer_List_View__c/listViews/Cloudrop__All.listView-meta.xml
<ListView>
    <fullName>Cloudrop__All</fullName>
    <columns>NAME</columns>
    <columns>Cloudrop__Primary_Object_Name__c</columns>
    <columns>Cloudrop__Child_Object_Wrapper__c</columns>
    <columns>Cloudrop__Primary_Object_Wrapper__c</columns>
    <columns>Cloudrop__Parent_Object_Wrapper__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>